--- a/hours.html
+++ b/hours.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         <figure>
-            <img src="/img/tacos_tray_400x267.png" alt="This is Tacos tray" width="400px" height="267px"
+            <img src="img/tacos_tray_400x267.png" alt="This is Tacos tray" width="400px" height="267px"
                 title="A Tray of Tasty Tacos">
             <figcaption>
                 A Trat of Tasty Tacos
