--- a/hours.html
+++ b/hours.html
@@ -17,8 +17,8 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/index.html">About <abbr title="Little Taco Shop">LTS</abbr></a></li>
-                <li><a href="/index.html">Our Menu</a></li>
+                <li><a href="index.html">About <abbr title="Little Taco Shop">LTS</abbr></a></li>
+                <li><a href="index.html">Our Menu</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
