--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
         <h1>Contact Us</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="index.html">About <abbr title="Little Taco Shop">LTS</abbr></a></li>
-                <li><a href="index.html">Our Menu</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./index.html">About <abbr title="Little Taco Shop">LTS</abbr></a></li>
+                <li><a href="./index.html">Our Menu</a></li>
                 <li><a href="hours.html">Store Hours</a></li>
             </ul>
         </nav>
